# soroban-quest

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md
_squirtle/: mod.ts
quests/1-hello-world/: Cargo.toml  README.md  STORY.md
quests/1-hello-world/src/: lib.rs  test.rs
quests/2-auth-store/: Cargo.toml  README.md  STORY.md
quests/2-auth-store/src/: error.rs  lib.rs  test.rs
quests/3-reverse-engineer/: Cargo.toml  README.md  STORY.md
quests/3-reverse-engineer/src/: lib.rs  test.rs
quests/4-cross-contract/: Cargo.toml  README.md  STORY.md  soroban_auth_store_contract.wasm
quests/4-cross-contract/src/: lib.rs  test.rs
quests/5-custom-types/: Cargo.toml  README.md  STORY.md
quests/5-custom-types/src/: lib.rs  test.rs  types.rs
quests/6-asset-interop/: Cargo.toml  README.md  STORY.md  soroban_token_spec.wasm
quests/6-asset-interop/py-scripts/: README.md  create.py  derive.py  import-export.py
quests/6-asset-interop/src/: lib.rs  test.rs
