[package]
name = "soroban-asset-interop-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "0.3.1"
soroban-auth = "0.3.1"

[dev_dependencies]
soroban-sdk = { version = "0.3.1", features = ["testutils"] }
soroban-auth = { version = "0.3.1", features = ["testutils"] }